--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@discordjs/voice": "^0.17.0",
     "discord.js": "^14.15.3",
     "node": "^18.20.4",
     "ytsr": "^3.8.4"
